src/emit/emitter/snapshots/mu__emit__emitter__tests__call-3.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
f(0, 1, 2)

# Func:
function "code":
  frame_size: 7
  length: 28
  const (length=1):
    0: "f"
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | push_small_int value=1
    12 | store_reg r5
    14 | push_small_int value=2
    19 | store_reg r6
    21 | load_global [0]
    23 | call r4, args=3
    26 | ret 
    27 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                         ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  
