src/emit/emitter/snapshots/mu__emit__emitter__tests__call-4.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
f(a=0)

# Func:
function "code":
  frame_size: 5
  length: 18
  const (length=2):
    0: "a"
    1: "f"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | push_small_int value=0
     8 | insert_to_dict_named [0], r4
    11 | load_global [1]
    13 | call_kw r4, args=0
    16 | ret 
    17 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  
