src/emit/emitter/snapshots/mu__emit__emitter__tests__call-6.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
f(a, b, c=2)

# Func:
function "code":
  frame_size: 7
  length: 26
  const (length=4):
    0: "a"
    1: "b"
    2: "c"
    3: "f"
  code:
     0 | load_global [0]
     2 | store_reg r5
     4 | load_global [1]
     6 | store_reg r6
     8 | create_empty_dict 
     9 | store_reg r4
    11 | push_small_int value=2
    16 | insert_to_dict_named [2], r4
    19 | load_global [3]
    21 | call_kw r4, args=2
    24 | ret 
    25 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                         ●━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  
