src/emit/emitter/snapshots/mu__emit__emitter__tests__call-7.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
a(b(c()))

# Func:
function "code":
  frame_size: 6
  length: 19
  const (length=3):
    0: "c"
    1: "b"
    2: "a"
  code:
     0 | load_global [0]
     2 | call0 
     3 | store_reg r5
     5 | load_global [1]
     7 | call r5, args=1
    10 | store_reg r4
    12 | load_global [2]
    14 | call r4, args=1
    17 | ret 
    18 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  
