src/emit/emitter/snapshots/mu__emit__emitter__tests__loop_stmt-4.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
while true:
  print "test"


# Func:
function "code":
  frame_size: 4
  length: 18
  const (length=1):
    0: "test"
  code:
     0 | push_true 
     1 | jump_if_false offset=15
     3 | nop 
     4 | nop 
     5 | nop 
     6 | nop 
     7 | load_const [0]
     9 | print 
    10 | jump_back offset=10
    12 | nop 
    13 | nop 
    14 | nop 
    15 | nop 
    16 | ret 
    17 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
