src/emit/emitter/snapshots/mu__emit__emitter__tests__method_call.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
o.f()

# Func:
function "code":
  frame_size: 4
  length: 7
  const (length=2):
    0: "f"
    1: "o"
  code:
    0 | load_global [1]
    2 | load_field [0]
    4 | call0 
    5 | ret 
    6 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
